--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
     <div><canvas id="preview"></canvas></div>
     
-    <form method="post" name="form" target="dummy" action="https://kanikanidahou.github.io/github-bteam/">
+    <form method="post" name="form" target="dummy" action="https://kanikanidahou.github.io/github-bteam2/">
         <fieldset>
             <div class="container">
                 <div class="row">
