--- a/index.html
+++ b/index.html
@@ -1,109 +1,211 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=4,user-scalable=yes">
-<!-- quaggaJSの読み込み -->
-<script src="./quagga.min.js"></script>
-<script>
-var DetectedCount=0,DetectedCode="";
-var video,tmp,tmp_ctx,jan,prev,prev_ctx,w,h,mw,mh,x1,y1;
-window.addEventListener('load',function(event){
-  video=document.createElement('video');
-  video.setAttribute("autoplay","");
-  video.setAttribute("muted","");
-  video.setAttribute("playsinline","");
-  video.onloadedmetadata = function(e){video.play();};
-  prev=document.getElementById("preview");
-  prev_ctx=prev.getContext("2d", {willReadFrequently:true});
-  tmp = document.createElement('canvas');
-  tmp_ctx = tmp.getContext("2d", {willReadFrequently:true});
-  jan=document.getElementById("jan");
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=4, user-scalable=yes">
+    <title>Barcode to Notion</title>
+    <script src="./quagga.min.js"></script>
+    <script>
+        var DetectedCount = 0, DetectedCode = "";
+        var video, tmp, tmp_ctx, jan, prev, prev_ctx, w, h, mw, mh, x1, y1;
 
-  //カメラ使用の許可ダイアログが表示される
-  navigator.mediaDevices.getUserMedia(
-    //マイクはオフ, カメラの設定   背面カメラを希望する 640×480を希望する
-    {"audio":false,"video":{"facingMode":"environment","width":{"ideal":640},"height":{"ideal":480}}}
-  ).then( //許可された場合
-    function(stream){
-      video.srcObject = stream;
-      //0.5秒毎にスキャンする
-      setTimeout(Scan,500,true);
-    }
-  ).catch( //許可されなかった場合
-    function(err){jan.value+=err+'\n';}
-  );
+        window.addEventListener('load', function (event) {
+            video = document.createElement('video');
+            video.setAttribute("autoplay", "");
+            video.setAttribute("muted", "");
+            video.setAttribute("playsinline", "");
+            video.onloadedmetadata = function (e) { video.play(); };
+            prev = document.getElementById("preview");
+            prev_ctx = prev.getContext("2d", { willReadFrequently: true });
+            tmp = document.createElement('canvas');
+            tmp_ctx = tmp.getContext("2d", { willReadFrequently: true });
+            jan = document.getElementById("jan");
 
-  function Scan(first){
-    if(first){
-      //選択された幅高さ
-      w=video.videoWidth;
-      h=video.videoHeight;
-      //画面上の表示サイズ
-      prev.style.width=(w/2)+"px";
-      prev.style.height=(h/2)+"px";
-      //内部のサイズ
-      prev.setAttribute("width",w);
-      prev.setAttribute("height",h);
-      mw=w*0.5;
-      mh=w*0.2;
-      x1=(w-mw)/2;
-      y1=(h-mh)/2;
-    }
-    prev_ctx.drawImage(video,0,0,w,h);
-    prev_ctx.beginPath();
-    prev_ctx.strokeStyle="rgb(255,0,0)";
-    prev_ctx.lineWidth=2;
-    prev_ctx.rect(x1,y1,mw,mh);
-    prev_ctx.stroke();
-    tmp.setAttribute("width",mw);
-    tmp.setAttribute("height",mh);
-    tmp_ctx.drawImage(prev,x1,y1,mw,mh,0,0,mw,mh);
+            //カメラ使用の許可ダイアログが表示される
+            navigator.mediaDevices.getUserMedia(
+                //マイクはオフ, カメラの設定 背面カメラを希望する 640×480を希望する
+                { "audio": false, "video": { "facingMode": "environment", "width": { "ideal": 640 }, "height": { "ideal": 480 } } }
+            ).then( //許可された場合
+                function (stream) {
+                    video.srcObject = stream;
+                    //0.5秒毎にスキャンする
+                    setTimeout(Scan, 500, true);
+                }
+            ).catch( //許可されなかった場合
+                function (err) { jan.value += err + '\n'; }
+            );
 
-    tmp.toBlob(function(blob){
-      let reader = new FileReader();
-      reader.onload=function(){
-        let config={
-          decoder: {
-            readers: ["ean_reader","ean_8_reader"],
-            multiple: false, //同時に複数のバーコードを解析しない
-          },
-          locator:{patchSize:"large",halfSample:false},
-          locate:false,
-          src:reader.result,
-        };
-        Quagga.decodeSingle(config,function(){});
-      }
-      reader.readAsDataURL(blob);
-    });
-    setTimeout(Scan,50,false);
-  }
+            function Scan(first) {
+                if (first) {
+                    //選択された幅高さ
+                    w = video.videoWidth;
+                    h = video.videoHeight;
+                    //画面上の表示サイズ
+                    prev.style.width = (w / 2) + "px";
+                    prev.style.height = (h / 2) + "px";
+                    //内部のサイズ
+                    prev.setAttribute("width", w);
+                    prev.setAttribute("height", h);
+                    mw = w * 0.5;
+                    mh = w * 0.2;
+                    x1 = (w - mw) / 2;
+                    y1 = (h - mh) / 2;
+                }
+                prev_ctx.drawImage(video, 0, 0, w, h);
+                prev_ctx.beginPath();
+                prev_ctx.strokeStyle = "rgb(255,0,0)";
+                prev_ctx.lineWidth = 2;
+                prev_ctx.rect(x1, y1, mw, mh);
+                prev_ctx.stroke();
+                tmp.setAttribute("width", mw);
+                tmp.setAttribute("height", mh);
+                tmp_ctx.drawImage(prev, x1, y1, mw, mh, 0, 0, mw, mh);
 
-  Quagga.onDetected(function (result) {
-    //読み取り誤差が多いため、3回連続で同じ値だった場合に成功とする
-    if(DetectedCode==result.codeResult.code){
-      DetectedCount++;
-    }else{
-      DetectedCount=0;
-      DetectedCode=result.codeResult.code;
-    }
-    if(DetectedCount>=3){
-      console.log(result.codeResult.code);
-      jan.value+=result.codeResult.code+'\n';
-      jan.scrollTop=jan.scrollHeight;
-      DetectedCode='';
-      DetectedCount=0;
-    }
-  });
-});
-</script>
+                tmp.toBlob(function (blob) {
+                    let reader = new FileReader();
+                    reader.onload = function () {
+                        let config = {
+                            decoder: {
+                                readers: ["ean_reader", "ean_8_reader"],
+                                multiple: false, //同時に複数のバーコードを解析しない
+                            },
+                            locator: { patchSize: "large", halfSample: false },
+                            locate: false,
+                            src: reader.result,
+                        };
+                        Quagga.decodeSingle(config, function () { });
+                    }
+                    reader.readAsDataURL(blob);
+                });
+                setTimeout(Scan, 50, false);
+            }
+
+            Quagga.onDetected(function (result) {
+                //読み取り誤差が多いため、3回連続で同じ値だった場合に成功とする
+                if (DetectedCode == result.codeResult.code) {
+                    DetectedCount++;
+                } else {
+                    DetectedCount = 0;
+                    DetectedCode = result.codeResult.code;
+                }
+                if (DetectedCount >= 3) {
+                    console.log(result.codeResult.code);
+                    jan.value += result.codeResult.code + '\n';
+                    jan.scrollTop = jan.scrollHeight;
+                    document.getElementById("ISBN").value = result.codeResult.code;
+                    DetectedCode = '';
+                    DetectedCount = 0;
+                }
+            });
+        });
+
+        function GetData() {
+            let isbn = document.getElementById("ISBN").value;
+            let url = `https://www.googleapis.com/books/v1/volumes?q=isbn:${isbn}`;
+
+            fetch(url)
+                .then(response => response.json())
+                .then(result => {
+                    if (result.items && result.items.length > 0) {
+                        const volumeInfo = result.items[0].volumeInfo;
+                        document.getElementById("title").value = volumeInfo.title || '';
+                        document.getElementById("subtitle").value = volumeInfo.subtitle || '';
+                        document.getElementById("authors").value = (volumeInfo.authors || []).join(', ');
+                        document.getElementById("publishedDate").value = volumeInfo.publishedDate || '';
+                        document.getElementById("pageCount").value = volumeInfo.pageCount || '';
+                        document.getElementById("imagePlace").src = volumeInfo.imageLinks ? volumeInfo.imageLinks.thumbnail : '';
+                        document.getElementById("imageSrc").value = volumeInfo.imageLinks ? volumeInfo.imageLinks.thumbnail : '';
+                    } else {
+                        alert("書籍データが見つかりませんでした。");
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert("データの取得に失敗しました。");
+                });
+        }
+
+        async function sendToNotion() {
+            const token = 'YOUR_NOTION_API_TOKEN'; // Notion APIトークンを入力してください
+            const databaseId = 'YOUR_DATABASE_ID'; // NotionデータベースIDを入力してください
+            const url = `https://api.notion.com/v1/pages`;
+
+            const headers = {
+                "Authorization": `Bearer ${token}`,
+                "Content-Type": "application/json",
+                "Notion-Version": "2021-05-13"
+            };
+
+            const title = document.getElementById("title").value;
+            const subtitle = document.getElementById("subtitle").value;
+            const authors = document.getElementById("authors").value;
+            const publishedDate = document.getElementById("publishedDate").value;
+            const pageCount = document.getElementById("pageCount").value;
+            const imageSrc = document.getElementById("imageSrc").value;
+
+            const payload = {
+                parent: { database_id: databaseId },
+                properties: {
+                    "Title": {
+                        "title": [
+                            {
+                                "text": {
+                                    "content": title
+                                }
+                            }
+                        ]
+                    },
+                    "Subtitle": {
+                        "rich_text": [
+                            {
+                                "text": {
+                                    "content": subtitle
+                                }
+                            }
+                        ]
+                    },
+                    "Authors": {
+                        "multi_select": authors.split(', ').map(name => ({ name }))
+                    },
+                    "Published Date": {
+                        "date": {
+                            "start": publishedDate
+                        }
+                    },
+                    "Page Count": {
+                        "number": parseInt(pageCount)
+                    },
+                    "Image": {
+                        "url": imageSrc
+                    }
+                }
+            };
+
+            try {
+                let response = await fetch(url, {
+                    method: 'POST',
+                    headers: headers,
+                    body: JSON.stringify(payload)
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+
+                let data = await response.json();
+                console.log(data);
+                alert("データがNotionに送信されました！");
+            } catch (error) {
+                console.error('There has been a problem with your fetch operation:', error);
+                alert("データの送信に失敗しました。");
+            }
+        }
+    </script>
 </head>
 <body>
-  <div><canvas id="preview"></canvas></div>
-  <textarea id="jan" rows="8" cols="40"></textarea>
-  
-    
-    <form method="post" name="form" target="dummy" action="https://kanikanidahou.github.io/github-bteam/">
+    <div><canvas id="preview"></canvas></div>
+    <textarea id="jan" rows="8" cols="40"></textarea>
+    <form method="post" name="form" target="dummy" action="">
         <fieldset>
             <div class="container">
                 <div class="row">
@@ -112,13 +214,12 @@ window.addEventListener('load',function(event){
                             Send To Notion<br>
                             <small class="text-muted">本のバーコードを読んでNotionに追加</small>
                         </h3>
-                        <div><canvas id="preview"></canvas></div> <!--quaggaJSのカメラがここに表示される-->
+                        <div><canvas id="preview"></canvas></div>
                         <label class="col-form-label" for="inputDefault">ISBN:</label>
-                        <!--quaggaJSでバーコードから読み取ったISBNがここに入力される-->
                         <input type="text" name="isbn" id="ISBN" class="form-control"><br>
-                        <button type="submit" onclick="GetData();" class="btn btn-primary">データ取得</button><br>
+                        <button type="button" onclick="GetData();" class="btn btn-primary">データ取得</button><br>
                         <img src="" id="imagePlace"><br>
-                        <label class="col-form-label" for="inputDefault">画像URL</label> <!--画像URLを取得したらsrcを設定する-->
+                        <label class="col-form-label" for="inputDefault">画像URL</label>
                         <input type="text" name="imageSrc" id="imageSrc" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">タイトル</label>
                         <input type="text" name="title" id="title" class="form-control"><br>
@@ -130,12 +231,12 @@ window.addEventListener('load',function(event){
                         <input type="text" name="publishedDate" id="publishedDate" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">ページ数</label>
                         <input type="text" name="pageCount" id="pageCount" class="form-control"><br>
-                        <button type="submit" class="btn btn-primary">Notionに送信</button><br>
+                        <button type="button" onclick="sendToNotion();" class="btn btn-primary">Notionに送信</button><br>
                     </div>
                 </div>
             </div>
         </fieldset>
     </form>
-
 </body>
 </html>
+
