--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         }
 
         async function sendToNotion() {
-            const token = 'YOUR_NOTION_API_TOKEN'; // Notion APIトークンを入力してください
-            const databaseId = 'YOUR_DATABASE_ID'; // NotionデータベースIDを入力してください
+            const token = 'secret_lruJvyFNd3aRm8HD5qmZX5JfKeqQdYaGCTxb5lP1z4E'; // Notion APIトークンを入力してください
+            const databaseId = '2517262d6cc0429797696292c1e83583'; // NotionデータベースIDを入力してください
             const url = `https://api.notion.com/v1/pages`;
 
             const headers = {
